Fix bleed between video and navbar

--- a/app/assets/stylesheets/application/components/video.scss
+++ b/app/assets/stylesheets/application/components/video.scss
@@ -1,6 +1,6 @@
 .video-block {
   position: sticky;
-  top: 44px;
+  top: 43px;
   aspect-ratio: 16 / 9;
   z-index: var(--z-index-video-overlay);
 
